Improve server implementation

--- a/views/index.pug
+++ b/views/index.pug
@@ -7,10 +7,11 @@ html(lang="en")
     title FLYWHEEL Mouseion
   body
     h1 FLYWHEEL Mouseion
+    div= path
     ul
       each fileName in fileNames
         li
           a(href="/" + fileName)= fileName
       each prefix in prefixes
         li
-          a(href="/" + prefix + "index.html")= prefix
+          a(href="/" + prefix)= prefix
