Prepare to make this repo public

--- a/src/appengine/views/index.pug
+++ b/src/appengine/views/index.pug
@@ -4,10 +4,9 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    title FLYWHEEL Mouseion
+    title #{title}
   body
-    h1 FLYWHEEL Mouseion
-    div= path
+    h1 #{title}
     ul
       each fileName in fileNames
         li
